# pilar-challenge

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  k8s.yml  pylint.yml  terraform.yml  test.yml
app/: main.py  model.py
app/test/: test_main.py
chart/: Chart.yaml  prometheus-values.yaml  values-local.yaml  values.yaml
chart/templates/: app-service.yaml  aws-auth-configmap.yaml  configmap.yaml  deployment.yaml  grafana-deployment.yaml  grafana-secret.yaml  grafana-service.yaml  prometheus-clusterrole.yaml  prometheus-clusterrolebinding.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-service-monitor.yaml  prometheus-service.yaml  prometheus-serviceaccount.yaml  service.yaml
infra/: backend.tf  modules.tf  provider.tf  variables.tf
infra/configs/: productions.tfvars
infra/modules/eks/: eks.tf  iam.tf  security-group.tf  variables.tf
infra/modules/network/: network.tf  output.tf  variables.tf
infra/modules/node/: iam.tf  node-group.tf  variables.tf
