[tool.poetry]
name = "pilar-challenge"
version = "0.1.0"
description = ""
authors = ["Aristeu <aristeuneto13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
prometheus-fastapi-instrumentator = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.5"
pytest = "^8.2.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
